--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,21 +1,21 @@
 <div class="row">
   <br><hr>
-  <h3><b><%= t "views.orders.new_order" %></b></h3>
+  <h3><b><%= t ".new_order" %></b></h3>
   <div class="col-sm-1"></div>
   <div class="col-sm-6">
-    <div id="order-head"><b><%= t "views.orders.new.select_address" %></b></div>
+    <div id="order-head"><b><%= t ".select_address" %></b></div>
     <div id="order-body">
         <div id="order-customer">
           <i class="fa fa-check" style="color: #9CA643"></i>
         <b><%= current_user.name %></b><br>
-        <span><%= t "views.orders.new.address" %> : <%= current_user.address %></span><br>
-        <span><%= t "views.orders.new.phone" %> : </span> <%= current_user.phone_number %>
+        <span><%= t ".address" %> : <%= current_user.address %></span><br>
+        <span><%= t ".phone" %> : </span> <%= current_user.phone_number %>
         </div>
         <div id="order-address">
-          <i class="fa fa-map-marker"></i> <span><b><%= t "views.orders.new.shipping_address" %></b></span>
+          <i class="fa fa-map-marker"></i> <span><b><%= t ".shipping_address" %></b></span>
           <%= form_for @order do |f| %>
-            <%= f.text_area :address, size: "70x4", id:"order-customer", placeholder: t("views.orders.new.example") %><br>
-            <%= f.submit t("views.orders.order"), class:"btn btn-success js-push-button" %>
+            <%= f.text_area :address, size: "70x4", id:"order-customer", placeholder: t(".example") %><br>
+            <%= f.submit t(".order"), class:"btn btn-success js-push-button" %>
           <% end %>
         </div>
 
@@ -23,15 +23,15 @@
   </div>
   <div class="col-sm-3">
     <div id="order-head">
-      <b><%= t "views.orders.new.info_order" %> ( <%=current_user.carts.count%> <%= t "views.orders.new.dish" %> )</b>
+      <b><%= t ".info_order" %> ( <%=current_user.carts.count%> <%= t ".orders" %> )</b>
     </div>
     <div id="order-body">
       <table class="table">
         <thead>
           <tr>
-            <th><%= t "views.orders.new.dish" %></th>
-            <th><%= t "views.orders.new.quantity" %></th>
-            <th><%= t "views.orders.new.price" %></th>
+            <th><%= t ".dish" %></th>
+            <th><%= t ".quantity" %></th>
+            <th><%= t ".price" %></th>
           </tr>
         </thead>
         <tbody>
@@ -43,7 +43,7 @@
            </tr>
           <% end %>
           <tr>
-            <td><b><%= t "views.orders.new.total" %> :</b></td>
+            <td><b><%= t ".total" %> :</b></td>
             <td><%= Cart.total current_user.id %> $</td>
           </tr>
         </tbody>
