--- a/app/views/layouts/_admin_footer.html.erb
+++ b/app/views/layouts/_admin_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="top_nav">
+<%# <div class="top_nav">
   <div class="nav_menu">
     <nav>
 	  <footer class="pull-left footer-admin">
@@ -9,4 +9,4 @@
 	  </footer>
     </nav>
   </div>
-</div>
+</div> %>
