--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,15 +1,18 @@
-<h4><label><%= t "all_orders" %></label></h4>
+<div class="panel-heading">
+  <span class="glyphicon glyphicon-list"></span>Danh sách đơn hàng
+</div>
+<br>
 <div class="container">
   <table id="delivery_month" class="table table-striped table-bordered" cellspacing="0" width="100%">
     <thead>
     <tr>
-      <th>ID</th>
-      <th><%=t "views.orders.index.customer" %></th>
-      <th><%=t "views.orders.index.employee" %></th>
-      <th><%=t "views.orders.index.address" %></th>
-      <th><%=t "views.orders.index.total_money" %></th>
-      <th><%=t "views.orders.index.status" %></th>
-      <th><%=t "views.orders.index.created_at" %></th>
+      <th>STT</th>
+      <th><%=t ".customer" %></th>
+      <th><%=t ".employee" %></th>
+      <th><%=t ".address" %></th>
+      <th><%=t ".total_money" %></th>
+      <th><%=t ".status" %></th>
+      <th><%=t ".created_at" %></th>
     </tr>
     </thead>
     <tbody>
@@ -28,12 +31,12 @@
   </table>
 </div>
 <div class="container">
-  <button class="btn btn-default btn-secondary"><i class="fa fa-file-excel-o"></i><%= link_to t("views.orders.index.download"), admin_orders_url(format: "xls") %></button>
+  <button class="btn btn-default btn-secondary"><i class="fa fa-file-excel-o"></i><%= link_to t(".download"), admin_orders_url(format: "xls") %></button>
 </div>
 <script>
-    $(document).ready(function() {
-        $('#delivery_month').DataTable();
-        $('#delivery_month_length').hide();
-        $('#delivery_month_info').hide();
-    } );
+  $(document).ready(function() {
+    $('#delivery_month').DataTable();
+    $('#delivery_month_length').hide();
+    $('#delivery_month_info').hide();
+  } );
 </script>
