--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,16 +1,18 @@
-<h3>admin mana user</h3>
+<div class="panel-heading">
+  <span class="glyphicon glyphicon-list"></span>Danh sách người dùng
+</div>
 
 <div class="row">
     <div class="col-md-9">
         <%= search_form_for [:admin,@search], html: {class: 'form-inline'} do |f| %>
-          <%= f.label :name_or_email_or_phone_number_cont, 'Criteria',  class: 'col-md-2 text-center' %>
+          <%= f.label :name_or_email_or_phone_number_cont, 'Từ khóa',  class: 'col-md-2 text-center' %>
           <%= f.search_field :name_or_email_or_phone_number_cont, class: 'col-md-8 form-control', placeholder: 'name, email or phone' %>
-          <%= f.submit 'search', :class => 'col-md-2 btn btn-primary' %>
+          <%= f.submit 'Tìm kiếm', :class => 'u-mgl5 col-md-1 btn btn-primary' %>
         <% end %>
     </div>
     <div class="col-md-3 text-right">
-       <%= link_to "create new", new_admin_user_path, class: "btn btn-primary btn-sm btn-create" %>
-       <%= link_to "export exel", new_admin_user_path, class: "btn btn-info btn-sm btn-create" %>
+       <%= link_to "Tạo mới", new_admin_user_path, class: "btn btn-primary btn-sm btn-create" %>
+       <%= link_to "Xuất excel", new_admin_user_path, class: "btn btn-info btn-sm btn-create" %>
     </div>
 </div>
 
