--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -17,7 +17,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="" target="_blank"><i class="fa fa-bell-o">
 						<span class="label label-info">25</span></i></a></li>
-					<li><%= link_to root_path do %><%= t "visit_site" %><% end %></li>
+					<li><%= link_to root_path do %><%= t ".visit_site" %><% end %></li>
 					<li class="dropdown ">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
 						Account
@@ -28,7 +28,7 @@
 								<li><%= link_to "Profile", user_path(current_user) %></li>
 								<li class="divider"></li>
 								<li><%= link_to logout_path, method: :delete do %>
-					               <%= t "views.layouts.logout" %><% end %>
+					               <%= t ".logout" %><% end %>
 					            </li>
 							<% end %>
 						</ul>
