--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -5,7 +5,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title"><%= t 'User_infomation' %></h4>
+          <h4 class="modal-title">Thông tin chi tiết</h4>
         </div>
         <div class="modal-body">
           
