--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,13 @@
   <body>
   	<%= render "layouts/header" %>
     <div class="container">
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %>
-          <button class="close" data-dismiss="alert">×</button>
-        </div>
-      <% end %>
+      <div id="flash">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %>
+            <button class="close" data-dismiss="alert">×</button>
+          </div>
+        <% end %>
+      </div>
       <%= yield %>
     </div>
     <br>
