--- a/app/views/orders/_customer_index.html.erb
+++ b/app/views/orders/_customer_index.html.erb
@@ -1,10 +1,12 @@
+<div class="panel-heading">
+  <span class="glyphicon glyphicon-list"></span>Danh sách Đơn hàng
+</div>
 <% @orders.each do |order| %>
   <hr class="<%= order.id %>">
   <div class="thumb-layout <%= order.id %>">
     <div class="row" style="display:flex; flex-wrap:wrap;">
-      <span><%= t "views.static_pages.show_orders.destination" %>: <%= order.address %></span>
       <% order.order_details.each do |order_detail| %>
-        <div class="col-md-2 col-sm-4">
+        <div class="col-md-3 col-sm-4">
           <div class="thumbnail">
             <%= link_to order_detail.food do %>
               <%= image_tag order_detail.food.img_url, alt: order_detail.food.name %>
@@ -12,26 +14,30 @@
             <div class="caption">
               <h4><%= link_to order_detail.food.name, order_detail.food, class: "text-center" %></h4>
               <div class="row">
-                <div class="col-md-12"><label><%= t("quantity") + " :"%></label><span><%= order_detail.quantity %></span></div>
-                <div class="col-md-12"><label><%= t("created_at") %></label>
+                <div class="col-md-12"><i class="fa fa-star" aria-hidden="true"></i> <label><%= t(".quantity") + " :"%></label><span><%= order_detail.quantity %></span></div>
+                <div class="col-md-12"><i class="fa fa-money" aria-hidden="true"></i> <label><%= t ".total_money" %></label>: <%= order.total_money %></div>
+                <div class="col-md-12"><i class="fa fa-address-book" aria-hidden="true"></i> <label><%= t ".destination" %></label>: <%= order.address %></div>
+                <div class="col-md-12"><i class="fa fa-clock-o" aria-hidden="true"></i> <label><%= t(".created_at") %>: </label>
                   <span><%= order_detail.created_at.strftime(t("date_format")) %></span>
+                </div>
+                <div class="col-md-12">
+                  <span id="delete-order ">
+                    <%= link_to order, method: :delete, remote: true, class: "label label-danger", data: {confirm: t(".confirm_delete")} do %>
+                      <i class="fa fa-trash" aria-hidden="true"></i>
+                    <% end %>
+                  </span>
+                  <span id="update-order">
+                    <button data-id="<%= order.id %>" type="button" class=" u-mgl5 btn btn-primary" name="order_id">
+                      <i class="fa fa-check fa-7x" aria-hidden="true"></i>
+                    </button>     
+                  </span>
                 </div>
               </div>
             </div>
           </div>
         </div>
       <% end %>
-      <span id="delete-order">
-        <%= link_to order, method: :delete, remote: true do %>
-          <i class="fa fa-times" aria-hidden="true"></i>
-        <% end %>
-      </span>
-
-      <span id="update-order">
-        <button data-id="<%= order.id %>" type="button" class="btn btn-primary" name="order_id">
-          <i class="fa fa-check" aria-hidden="true"></i>
-        </button>     
-      </span>
+      
     </div>
   </div>
 <% end %>
