--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -6,7 +6,7 @@
 			<div class="col-md-12">
 			
 				<div class="site-heading ">
-					<h3>All Food In New Delhi</h3>
+					<h3>All Food In Store</h3>
 					<p>The easiest way to your favourite food.</p>
 					<div class="border text-center "></div>
 				</div>
@@ -34,7 +34,7 @@
 	    <div class="row text-center">
 		    <div class="col-md-12">
 			    <div class="site-heading ">
-					<h3>New Food In New Delhi</h3>
+					<h3>New Food In Store</h3>
 					<p>The easiest way to your favourite food.</p>
 					<div class="border text-center "></div>
 				</div>
@@ -48,7 +48,7 @@
 	    <div class="row text-center">
 		    <div class="col-md-12">   
 			    <div class="site-heading ">
-					<h3>Hot Food In New Delhi</h3>
+					<h3>Hot Food In Store</h3>
 					<p>The easiest way to your favourite food.</p>
 					<div class="border text-center "></div>
 				</div>
@@ -62,7 +62,7 @@
 	    <div class="row text-center" id="hot_sale">
 		    <div class="col-md-12" >   
 			    <div class="site-heading ">
-					<h3>Hot Sale Food In New Delhi</h3>
+					<h3>Hot Sale Food In Store</h3>
 					<p>The easiest way to your favourite food.</p>
 					<div class="border text-center "></div>
 				</div>
