--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -56,7 +56,7 @@
 	<br>
 	<div class=" row col-md-12">
 	    <div class="col-md-12"> 
-	      <h4 class="section-titlepara">PRODUCT DETAILS</h4>
+	      <h4 class="section-titlepara">GIỚI THIỆU MÓN ĂN</h4>
 	    </div>
 			<div class="row col-md-12">
 				<div class="border col-md-2"></div>
@@ -74,7 +74,7 @@
 	<%# food suggestion %>
 	<div class=" row col-md-12">
 	    <div class="col-md-12"> 
-	      <h4 class="section-titlepara">PRODUCT SUGGESTION</h4>
+	      <h4 class="section-titlepara">XEM THÊM</h4>
 	    </div>
 			<div class="row col-md-12">
 			  <div class="border col-md-3"></div>
@@ -121,7 +121,7 @@
 	
 	<div class="row col-md-12">
          <div class="col-md-12"> 
-           <h4 class="section-titlepara">COMMENTS</h4>
+           <h4 class="section-titlepara">BÌNH LUẬN VỀ MÓN </h4>
          </div>
          <div class="border col-md-2"></div>
 
