--- a/app/views/admin/foods/_modal_food.html.erb
+++ b/app/views/admin/foods/_modal_food.html.erb
@@ -47,7 +47,7 @@
       
       <div class="row ">
          <div class="col-md-12"> 
-           <h4 class="section-titlepara">PRODUCT DETAILS</h4>
+           <h4 class="section-titlepara">THÔNG TIN CHI TIẾT CỦA MÓN ĂN</h4>
          </div>
          <div class="border col-md-2"></div>
 
