--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="row cart-table" style="backgound: #123">
     <h2 style="text-align: center;">
-        Review Your Shopping Cart
+        CÁC ĐƠN HÀNG
     </h2>
     <hr/>
     <ul style="list-style-type: none;">
