--- a/app/views/carts/index_tem_for_me.html.erb
+++ b/app/views/carts/index_tem_for_me.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-12 col-md-10 col-md-offset-1">
             <h2 style="text-align: center;">
-                        Review Your Shopping Cart
+                        CÁC ĐƠN HÀNG
                     </h2>
                     <hr/>
             <table class="table table-hover">
