--- a/app/views/foods/_modal_add_cart.html.erb
+++ b/app/views/foods/_modal_add_cart.html.erb
@@ -5,7 +5,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title"><%= t "views.static_pages.home.cart.add_to_cart" %></h4>
+        <h4 class="modal-title">Thêm vào giỏ hàng</h4>
       </div>
       <div class="modal-body">
         <b><h4><%= food.name %></h4></b>
