--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
     	<div class="Features-section paddingTB60 bg-dgrey ">
 			<div class="container">
 				<div class="row text-center">
-					<P>BRANCH.COM.VN</P>
+					<P>PEASHOP.COM.VN</P>
 					<h3>Chọn Món Hôm Nay, Nhận Ngay Ưu Đãi</h3>
 				</div>
 				<br>
@@ -86,7 +86,7 @@
 						    <h2>Chọn Món Theo Cách Của Bạn </h2>
 						</div>
 						<div class="col-md-12">
-					    Bạn đang khó khăn trong việc lựa chọn Món ăn đúng sở thích, có giao hàng tận nơi ? Hay Bạn đang tìm Gilf E.Voucher để tặng người thân, bạn bè ? Hoặc là Bạn đang tìm một buổi tối lãng mạn tại nhà hàng sang trọng ? Hãy để Chonmon.vn giúp Bạn làm điều đó nhé, Chỉ bằng 1 cú CLICK.
+					    Bạn đang khó khăn trong việc lựa chọn Món ăn đúng sở thích, có giao hàng tận nơi ? Hay Bạn đang tìm Gilf E.Voucher để tặng người thân, bạn bè ? Hoặc là Bạn đang tìm một buổi tối lãng mạn tại nhà hàng sang trọng ? Hãy để peashop.vn giúp Bạn làm điều đó nhé, Chỉ bằng 1 cú CLICK.
 					    </div>
 					</div>
 			    </div>
@@ -135,7 +135,7 @@
 					<div class="row">
 						<div class="col-sm-6 ">
 							<div class="copyright-text">
-								<p>CopyRight © 2018 </p>
+								<p>CopyRight © 2019 </p>
 							</div>
 						</div> <!-- End Col -->
 						<div class="col-sm-6 ">
