--- a/app/views/shared/_form_login.html.erb
+++ b/app/views/shared/_form_login.html.erb
@@ -8,20 +8,22 @@
   <div class="row col-md-4 col-md-offset-4">
     <div class="main">
       <h3>Please Log In, or <%= link_to "Sign up", signup_path %></h3>
-      <div class="row">
+      <%# <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6">
           <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6">
           <a href="#" class="btn btn-lg btn-info btn-block">Google</a>
         </div>
-      </div>
+      </div> %>
       <div class="login-or">
         <hr class="hr-or">
-        <span class="span-or">or</span>
+        <%# <span class="span-or">or</span> %>
       </div>
       <div class="row">
         <%= form_for(:session, url:login_path) do |f| %>
+           <%#= render 'shared/error_messages', object: @user%>
+           
            <%= f.label :email %>
            <%= f.email_field :email, class: 'form-control' %>
 
@@ -33,7 +35,7 @@
              <span>Remember me on this computer</span>
            <% end %>
 
-           <%= f.submit 'login', class: 'btn btn-primary'%>
+           <%= f.submit 'login', class: 'btn btn-primary col-md-12'%>
         <% end %>
 
         <p> <%= link_to "Sign up now!", signup_path %>
