--- a/app/views/shared/_form_signup.html.erb
+++ b/app/views/shared/_form_signup.html.erb
@@ -26,7 +26,7 @@
             <%= f.label :password_confirmation, "Confirmation" %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
             <br>
-            <%= f.submit "Create my account", class: "btn btn-primary" %>
+            <%= f.submit "Create my account", class: "btn btn-primary col-md-12" %>
           <% end %>
           <p> <%= link_to "Login now!", login_path %>
           <%= link_to "Visit side!", root_path %></p>
