--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit user") %>
-<h3>Update your profile</h3>
+<h3>Sửa thông tin cá nhân</h3>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
