--- a/app/views/orders/_customer_index.html.erb
+++ b/app/views/orders/_customer_index.html.erb
@@ -26,11 +26,11 @@
                       <i class="fa fa-trash" aria-hidden="true"></i>
                     <% end %>
                   </span>
-                  <span id="update-order">
+                  <!-- <span id="update-order">
                     <button data-id="<%= order.id %>" type="button" class=" u-mgl5 btn btn-primary" name="order_id">
                       <i class="fa fa-check fa-7x" aria-hidden="true"></i>
                     </button>     
-                  </span>
+                  </span> -->
                 </div>
               </div>
             </div>
