--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -5,11 +5,11 @@
               <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th>Product</th>
-                        <th>Quantity</th>
-                        <th class="text-center">Price</th>
+                        <th>Tên Sản phẩm </th>
+                        <th>Số lượng</th>
+                        <th class="text-center">Giá</th>
                         <%# <th class="text-center">Total</th> %>
-                        <th>Action</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
