--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -25,7 +25,7 @@
 						<ul class="dropdown-menu" role="menu">
 							<% if logged_in? %>
 								<li class="dropdown-header"><%= current_user.name %></li>
-								<li><%= link_to "Profile", user_path(current_user) %></li>
+								<li><%= link_to "TT cá nhân", user_path(current_user) %></li>
 								<li class="divider"></li>
 								<li><%= link_to logout_path, method: :delete do %>
 					               <%= t ".logout" %><% end %>
