--- a/app/views/admin/foods/edit.html.erb
+++ b/app/views/admin/foods/edit.html.erb
@@ -1,4 +1,4 @@
-<h4>Edit Food</h4>
+<h4>Sửa thông tin món ăn</h4>
 <%= form_for [:admin, @food], :html => {class: 'col-md-10'} do |f| %>
       <%= render 'shared/error_messages', object: @food %>
       
