--- a/app/views/admin/users/_modal_user.html.erb
+++ b/app/views/admin/users/_modal_user.html.erb
@@ -62,7 +62,7 @@
       <td class="col-md-4">
         <strong>
           <i class="fa fa-users"></i>
-          <%= t "users.form.role" %>
+          Quyền
         </strong>
       </td>
       <td>
@@ -73,7 +73,7 @@
       <td class="col-md-4">
         <strong>
           <i class="fa fa-clock-o"></i>
-          <%= t "users.form.created_at" %>
+          Ngày tạo
         </strong>
       </td>
       <td>
