--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h4>Edit User</h4>
+<h4>Sửa thông tin người dùng</h4>
 
 <%= form_for [:admin,@user], html: {id: "new_user", class: 'col-md-5'} do |f| %>
       <%= render 'shared/error_messages', object: @user %>
