--- a/app/views/layouts/employee.html.erb
+++ b/app/views/layouts/employee.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FoodServices</title>
+  <title>Employee FoodServices</title>
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application' %>
-
+  <%= favicon_link_tag asset_path('user.png') %>
 <!------ Include the above in your HEAD tag ---------->
 
 
