--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -336,7 +336,8 @@ input {
     box-shadow: 0px 0px 10px #4bc6ff;
   }
   .line{
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+    margin-top: 8px;
   }
   @media screen and (max-width: 770px) {
     .right{
@@ -460,6 +461,13 @@ img {
 
 .product-title, .rating, .product-description, .price, .vote, .sizes {
   margin-bottom: 15px;
+}
+
+.text_extend {
+  white-space: nowrap; 
+  width: 100px; 
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .product-title {
@@ -663,4 +671,3 @@ img {
   background-image: url("../images/986.jpg");
   background-color: #cccccc;
 }
-
