--- a/app/views/admin/foods/new.html.erb
+++ b/app/views/admin/foods/new.html.erb
@@ -1,4 +1,4 @@
-<h4>Create Food</h4>
+<h4>Tạo món ăn mới</h4>
 <%= form_for [:admin, @food], :html => {class: 'col-md-10'} do |f| %>
       <%= render 'shared/error_messages', object: @food %>
       
