--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,4 @@
-<h4>Create User</h4>
+<h4>Tạo người dùng mới</h4>
 <%= form_for [:admin,@user], :html => {class: 'col-md-5'} do |f| %>
       <%= render 'shared/error_messages', object: @user %>
       
