--- a/app/views/foods/_food_detail.html.erb
+++ b/app/views/foods/_food_detail.html.erb
@@ -4,25 +4,31 @@
       <%= link_to food do %>
            <%= image_tag food.img_url, alt: food.name, :class => "style_img_view"%>
           <% end %>
-      <h4><%= link_to food.name, food, class: "text-center" %></h4>
+      <div class="row">
+        <h4 class="col-md-8"><%= link_to food.name, food, class: "text-center" %></h4>
+        <% if food.discount.present? %>
+          <h5 class="col-md-4 text-center">
+            <label>-<%= food.discount %>%</label>
+          </h5>
+        <% end %>
+      </div>
       
       <div class="row ratings">
         <div class="col-md-6">
           <i class="fa fa-eye" aria-hidden="true"> <%= count_view food%></i>
         </div>
         <div class="stars1 col-md-6">
-          <span id="vote-avg"><%= "#{food.rating_avg} / #{food.votes.count} " %></span>
-          <span> <%= t "views.foods.show.header.rate" %></span><br><br>
+          <i id="vote-avg" class="fa fa-star" aria-hidden="true">&nbsp<%= "#{food.rating_avg} / #{food.votes.count} " %></i>
         </div>
       </div>
-      <p><%= raw(truncate food.description || t(".no_description"), length: Settings.sort_descriptions) %></p>
+      <%# <p><%= raw(truncate food.description || t(".no_description"), length: Settings.sort_descriptions) %>
       <hr class="line">
       <div class="row">
         <div class="col-md-8 col-sm-8">
           <% if food.discount.present? %>
             <del class="small_price col-md-4"><%= format_price food.price %></del>
           <% end %>
-          <h4 class="price col-md-8"><%= get_promotion_price food.price, food.discount %></h4>
+          <h4 class="price col-md-8" style="padding-left: 30px;"><%= get_promotion_price food.price, food.discount %></h4>
           <!-- <p class="price"><%= format_price food.price %></p> -->
         </div>
         <div class="col-md-4 col-sm-4">
